--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.23",
+    "@vitest/coverage-c8": "^0.25.8",
     "git-commit-msg-linter": "^4.4.0",
     "husky": "^8.0.2",
     "typescript": "^4.9.4",
